engine/codex-rs/tui/src/app/snapshots/codex_tui__app__agents_overview__tests__command_center__live_center_custom_footer.snap
---
source: tui/src/app/agent_center_tests.rs
expression: "screen(&view, 100, 12)"
---
  Agent command center  Group: Project  g
   All 0   Needs you 0   Working 0   Ready 0   Inactive 0                     tab/shift+tab filter
  ────────────────────────────────────────────────────────────────────────────────────────────────
  No tasks yet                                            │
                                                          │
                                                          │
                                                          │
                                                          │
                                                          │
                                                          │
                                                          │
  ? help  esc back  k/j move  enter open  n new
