engine/codex-rs/tui/src/app/snapshots/codex_tui__app__agents_overview__tests__command_center__live_center_custom_help.snap
---
source: tui/src/app/agent_center_tests.rs
expression: "screen(&view, 100, 24)"
---
  Agent command center  Group: Project  g
   All 1   Needs you 0   Working 0   Ready 1   Inactive 0                          tab/⇧tab filter
  ────────────────────────────────────────────────────────────────────────────────────────────────
  Task shortcuts

  Navigate            Tasks                   View
  k      Up           n          New          tab/⇧tab  Filter
  j      Down         o          Resume       f3        Search
  enter  Open         f          Fork         g         Group
  pgdn   Page down    z r        Rename
  ⌃c     Quit         x          Stop
                      h          Hide
                      backspace  Delete
                      z p        Pin/unpin









  esc back
