engine/codex-rs/tui/src/app/snapshots/codex_tui__app__agents_overview__tests__command_center__live_center_narrow_rename.snap
---
source: tui/src/app/agent_center_tests.rs
expression: rendered
---
  Agent command center  Group: Projec…
   All 1   Needs you 0   Working 0   ›
  ────────────────────────────────────
  Rename › 界 界 界 界 界 界 界 日 本 語  é 👩‍💻
      Tasks
  /tmp/project  1
  › ○ Retained task










  esc back  enter rename
