engine/codex-rs/tui/src/app/snapshots/codex_tui__app__agents_overview__tests__command_center__live_center_status_filter.snap
---
source: tui/src/app/agent_center_tests.rs
expression: "screen(&view, 40, 12)"
---
  Agent command center  Group: Projec…
  ‹  Working 0   Ready 1   Inactive 1
  ────────────────────────────────────
      Tasks
  /tmp/project  1 of 3
  › ○ Unloaded task





  ? help  esc back  ↑/↓ move  enter o…
